<resources>
    <string name="app_name">MQQTSampleTask</string>
    <!-- Strings used for fragments for navigation -->
    <string name="connect_fragment_label">Connect Fragment</string>
    <string name="client_fragment_label">Client Fragment</string>

    <string name="button_connect_text">Connect</string>
    <string name="button_prefill_text">Prefill</string>
    <string name="button_clean_text">Clean</string>

    <string name="server_uri_text">Server URI</string>
    <string name="client_id_text">Client ID</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>

    <string name="button_disconnect_text">Disconnect</string>
    <string name="button_publish_text">Publish</string>
    <string name="button_subscribe_text">Subscribe</string>
    <string name="button_unsubscribe_text">Unsubscribe</string>
    <string name="topic_text">Topic</string>
    <string name="message_text">Message</string>
    <string name="connect">Connect</string>
    <string name="recive_msg">Recive Msg</string>
    <string name="recive_msg_Info">A Massage that is recieving from Mqqt.</string>
    <string name="result">Result</string>
    <string name="no_server_connected_subscriber">Impossible to subscribe, no server connected</string>
    <string name="no_server_connected_publish">Impossible to publish, no server connected</string>

</resources>