<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/button_connect_mqqt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/button_subscribe"
            app:layout_constraintStart_toStartOf="@+id/button_subscribe"
            app:layout_constraintTop_toBottomOf="@+id/button_subscribe" />

        <!--<Button
            android:id="@+id/button_prefill_client"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/button_prefill_text"
            app:layout_constraintBottom_toTopOf="@+id/button_disconnect"
            app:layout_constraintEnd_toEndOf="@+id/button_subscribe"
            app:layout_constraintStart_toStartOf="@+id/button_subscribe"
            app:layout_constraintTop_toBottomOf="@+id/button_subscribe"
            app:layout_constraintVertical_bias="1.0" />-->

      <!--  <Button
            android:id="@+id/button_disconnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/button_disconnect_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button_subscribe"
            app:layout_constraintStart_toStartOf="@+id/button_subscribe"
            app:layout_constraintTop_toBottomOf="@+id/button_connect_mqqt" />-->

        <Button
            android:id="@+id/button_subscribe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_subscribe_text"
            app:layout_constraintEnd_toEndOf="@+id/edittext_subtopic"
            app:layout_constraintStart_toStartOf="@+id/edittext_subtopic"
            app:layout_constraintTop_toBottomOf="@+id/edittext_subtopic" />


        <Button
            android:id="@+id/button_publish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_publish_text"
            app:layout_constraintEnd_toEndOf="@+id/edittext_pubmsg"
            app:layout_constraintStart_toStartOf="@+id/edittext_pubmsg"
            app:layout_constraintTop_toBottomOf="@+id/edittext_pubmsg" />

        <EditText
            android:id="@+id/edittext_pubtopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/topic_text"
            android:ems="15"
            android:hint="@string/topic_text"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_pubtopic" />

        <EditText
            android:id="@+id/edittext_subtopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/topic_text"
            android:ems="15"
            android:hint="@string/topic_text"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_subtopic" />

        <EditText
            android:id="@+id/edittext_pubmsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/message_text"
            android:ems="15"
            android:hint="@string/message_text"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_pubmsg" />

        <TextView
            android:id="@+id/textview_pubtopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/topic_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_subtopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/topic_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_publish" />

        <TextView
            android:id="@+id/textview_pubmsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/message_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_pubtopic" />

        <TextView
            android:id="@+id/textview_recive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/recive_msg_Info"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_connect_mqqt" />
        <TextView
            android:id="@+id/textview_recive_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/result"
            android:textSize="20sp"
            android:textColor="@android:color/holo_green_dark"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_recive" />

</androidx.constraintlayout.widget.ConstraintLayout>